--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>ui-automation</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>ui-automation</name>
+  <name>ui-automation Demo</name>
   <url>https://github.com/gmadane/ui-automation.git</url>
 
   <properties>
