--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -5,59 +5,34 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-name: UI Automation Suite
+name: UI Automation
 
 on:
   push:
-    branches: [ "master" ]   # since your repo has 'master' branch
+    branches: [ master ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ master ]
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # Step 2: Set up Java 23.0.2
       - name: Set up JDK 23
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
-          java-version: '23.0.2'
           distribution: 'temurin'
+          java-version: '23'
 
-      # Step 3: Cache Maven dependencies (faster builds)
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      # Step 4: Build without running tests
-      - name: Build Project
-        run: mvn clean package -DskipTests
-
-      # Step 5: Run TestNG suite
       - name: Run Tests
-        run: mvn test
+        run: mvn clean test -Dbrowser=chrome
 
-      # Step 6: Upload build artifact (JAR files)
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
+      - name: Upload Test Reports
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
-          name: automation-build
-          path: target/*.jar
-
-      # Step 7: Upload Extent Reports
-      - name: Upload Extent Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: extent-reports
-          path: |
-            test-output/**
-            reports/**
+          name: surefire-reports
+          path: target/surefire-reports
