--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -5,9 +5,9 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  workflow_dispatch:    # ✅ allows you to run manually from GitHub Actions tab
+  workflow_dispatch:   
   schedule:
-    - cron: '*/5 * * * *' # ✅ runs every day at 03:00 UTC (you can change this)
+    - cron: '0 3 * * *' 
 
 jobs:
   test:
