--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -33,17 +33,11 @@ jobs:
           name: surefire-reports
           path: target/surefire-reports
 
-      - name: Package Project Source
-      run: |
-    if [ "$(ls -A)" ]; then
-      tar -czvf ui-automation-src.tar.gz .
-    else
-      echo "No files to archive"
-      exit 1
-    fi
+     # - name: Package Project Source
+    #    run: tar -czvf ui-automation-src.tar.gz .
 
-      - name: Upload Project Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ui-automation-source-package
-          path: ui-automation-src.tar.gz
+    #  - name: Upload Project Artifact
+     #   uses: actions/upload-artifact@v4
+     #   with:
+     #     name: ui-automation-source-package
+       #   path: ui-automation-src.tar.gz
