--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -5,9 +5,9 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  workflow_dispatch:   
+  workflow_dispatch:
   schedule:
-    - cron: '0 3 * * *' 
+    - cron: '0 3 * * *'
 
 jobs:
   test:
@@ -33,11 +33,27 @@ jobs:
           name: surefire-reports
           path: target/surefire-reports
 
-     # - name: Package Project Source
-    #    run: tar -czvf ui-automation-src.tar.gz .
+      - name: Archive Extent Report
+        if: success()
+        run: |
+          mkdir -p artifacts
+          cp target/extent-report.html artifacts/
 
-    #  - name: Upload Project Artifact
-     #   uses: actions/upload-artifact@v4
-     #   with:
-     #     name: ui-automation-source-package
-       #   path: ui-automation-src.tar.gz
+      - name: Send Email with Extent Report
+        if: success()
+        uses: devops-actions/email@v1
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.AUTOMATION }}
+          subject: "✅ UI Automation Test Report"
+          to: madaneganesh80@gmail.com
+          from: ${{ secrets.EMAIL_USERNAME }}
+          body: |
+            Hello Team,
+
+            The UI automation tests have completed successfully.
+            Please find the attached Extent Report for details.
+
+          attachments: artifacts/extent-report.html
